<resources>
    <string name="app_name">Tickets</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_add_station">add_station</string>
    <string name="title_activity_create_station">create_station</string>
    <string name="title_activity_display_stations">DisplayStations</string>
    <string name = "yes">Yes</string>
    <string name = "no">No</string>
    <string name = "stations">Stations</string>
    <string name = "station_name">Station name</string>
    <string name = "area">Area</string>
    <string name = "add">Add!</string>
    <string name = "curr_name">Current name</string>
    <string name = "old">Old</string>
    <string name="new_name">New name</string>
    <string name="submit">Submit</string>
    <string name="curr_zone">Current zone</string>
    <string name="new_zone">New zone</string>
    <string name="old_zone">Old zone</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_station">Add station</string>
    <string name="display_stations">Display stations</string>
    <string name="choose_stations">Choose stations</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="price">Price</string>

    <string-array name="cities">
        <item>Suphia</item>
        <item>Eylapving</item>
        <item>Gutol</item>
        <item>Ubleland</item>
        <item>Uazloumond</item>
        <item>Frane</item>
        <item>Brento</item>
        <item>Min</item>
        <item>Yliozark</item>
        <item>Coikance</item>
        <item>Poaxsas</item>
        <item>Igluerora</item>
        <item>Clidvine</item>
        <item>Ametmouth</item>
        <item>Evlaaton</item>
        <item>Kance</item>
        <item>Brouver</item>
        <item>Flul</item>
        <item>Yrioclok</item>
        <item>Esheakhares</item>
        <item>Altensturmberg</item>
        <item>Oberlauken</item>
        <item>Kniepe</item>
        <item>Eulgem</item>
        <item>Kunrau</item>
        <item>Blumenrain</item>
        <item>Matersen</item>
        <item>Scherstetten</item>
        <item>Wullmeringhausen</item>
        <item>Kirschgoen</item>
    </string-array>
</resources>
